change config file and get synonym working

--- a/credentials.yml
+++ b/credentials.yml
@@ -28,5 +28,16 @@ rest:
 
 # This entry is needed if you are using Rasa X. The entry represents credentials 
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
-rasa:
-  url: "http://localhost:5002/api"
+#rasa:
+#  url: "http://localhost:5002/api"
+
+# telegram
+# "bot_channel_token": "1287766685:AAHUSdAvWNxUb2uc8YVRSQjqJ_aTLv2JjS0",
+# "bot_channel_name": "lxftmBot"
+# xxxxxxx come from the link after run ngrok http 5005
+    #Forwarding                    http://aaf2706626d2.ngrok.io -> http://localhost:5005
+    #Forwarding                    https://aaf2706626d2.ngrok.io -> http://localhost:5005
+telegram:
+    access_token: "1287766685:AAHUSdAvWNxUb2uc8YVRSQjqJ_aTLv2JjS0"
+    verify: "lxftmBot"
+    webhook_url: "https://aaf2706626d2.ngrok.io/webhooks/telegram/webhook"
