--- a/config.yml
+++ b/config.yml
@@ -19,9 +19,13 @@ pipeline:
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
+# xiaofeng add: the compatibility issue in Rasa 2.0 for policy, change from EmbeddingPolicy to RulePolicy
+# /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/rasa/core/policies/mapping_policy.py:54: FutureWarning: 'MappingPolicy' is deprecated and will be removed in the future. It is recommended to use the 'RulePolicy' instead. (will be removed in 3.0.0)
+  #  docs=DOCS_URL_MIGRATION_GUIDE,
+  #InvalidPolicyConfig: Module for policy 'EmbeddingPolicy' could not be loaded. Please make sure the name is a valid policy.
 policies:
   - name: MemoizationPolicy
   - name: MappingPolicy
-  - name: EmbeddingPolicy
+  - name: RulePolicy
   - name: FormPolicy
   - name: TwoStageFallbackPolicy
