combine some intents and change the entity searching code when run actions

--- a/config.yml
+++ b/config.yml
@@ -8,10 +8,10 @@ pipeline:
 - name: LanguageModelTokenizer
 - name: LanguageModelFeaturizer
 - name: DIETClassifier
-  epochs: 100
+  epochs: 200
 - name: EntitySynonymMapper
 - name: ResponseSelector
-  epochs: 100
+  epochs: 200
 
 #pipeline:
 #- name: WhitespaceTokenizer
@@ -38,5 +38,6 @@ policies:
   - name: FormPolicy
   - name: FallbackPolicy
     nlu_threshold: 0.2
-    core_threshold: 0.2
+    core_threshold: 0.15
+    ambiguity_threshold: 0.05
     fallback_action_name: action_default_fallback
