--- a/config.yml
+++ b/config.yml
@@ -11,9 +11,9 @@ pipeline:
   epochs: 200
 - name: EntitySynonymMapper
 - name: ResponseSelector
-  epochs: 200
+  epochs: 100
 
-#pipeline:
+# 1st version pipeline:
 #- name: WhitespaceTokenizer
 #- name: RegexFeaturizer
 #- name: LexicalSyntacticFeaturizer
@@ -32,12 +32,13 @@ pipeline:
 policies:
   - name: MemoizationPolicy
   - name: TEDPolicy
-    max_history: 5
-    epochs: 100
+    max_history: 2
+    epochs: 10
   - name: MappingPolicy
   - name: FormPolicy
   - name: FallbackPolicy
     nlu_threshold: 0.2
-    core_threshold: 0.15
-    ambiguity_threshold: 0.05
+    core_threshold: 0.01
+    ambiguity_threshold: 0.01
     fallback_action_name: action_default_fallback
+#    enable_fallback_prediction: False
